feat: [Diego] retirando endpoints inuteis
